Add card content and styles

--- a/style.css
+++ b/style.css
@@ -85,3 +85,65 @@ body {
 .right-container > div {
   flex-grow: 1;
 }
+
+/* projects section */
+.projects-container {
+  padding: 0 20px;
+}
+
+.projects-container > :first-child {
+  font-size: large;
+  margin: 20px 0;
+}
+
+.project-cards-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
+/* card styles */
+.card {
+  --size: 6px;
+
+  background-color: white;
+  border-radius: var(--size);
+  border-left: var(--size) solid var(--international-orange-engineering);
+}
+
+.card .title{
+  font-weight: bold;
+  text-transform: capitalize;
+}
+
+/* card layout */
+.card{
+  display: grid;
+  grid-template-areas:
+    "title"
+    "text"
+    "buttons";
+    grid-template-rows: 2em 8em 2em;
+
+  padding: 20px 10px;
+}
+
+.card .title {
+  grid-area: title;
+  margin-bottom: 5px;
+}
+
+.card .text {
+  grid-area: text;
+  margin-bottom: 10px;
+}
+
+.card .buttons {
+  grid-area: buttons;
+  align-self: center;
+  justify-self: end;
+}
+
+.card .buttons > span {
+  margin: 0 10px;
+}
